# Consulting-Report-Auto-Factory

./: .gitignore  LICENSE  README.md  WEBUI_GUIDE.md  app.py  pyproject.toml  requirements.txt
config/: business_brief.txt  settings.example.yaml
data/input/: customers.csv  orders.csv
docs/: results_analysis.md
scripts/: generate_reports.py  generate_sample_data.py  validate_artifacts.py
src/consulting_auto_factory/: __init__.py  analysis_tools.py  analysis_tools_v2.py  charting.py  cli.py  config.py  data_loader.py  llm_client.py  models.py  orchestrator.py
src/consulting_auto_factory/agents/: data_analyst_agent.py  insights_agent.py  planner_agent.py  qa_agent.py  slide_outline_agent.py
src/reporting/: provenance.py  rounding.py  templates.py
templates/: consulting_report.md.j2  slides_outline.md.j2
tests/: test_analysis_tools.py  test_cli.py  test_data_loader.py
